# SillyLoops

./: .duck-context.md  .flutter-plugins-dependencies  .gitignore  Dockerfile  HOW_TO_RUN_LOCALLY.md  QUICKSTART.md  README.md  analysis_options.yaml  build_and_launch.sh  download_samples.sh  launch.sh  nginx.conf  pubspec.yaml  setup_and_launch.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/samplebeat/samplebeat/: AudioEngine.kt  MainActivity.kt
assets/samples/: .gitkeep  README.txt
conductor/: rebuild-hf-config.md
ios/: Podfile
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  Info.plist
lib/: main.dart
lib/providers/: arpeggiator_provider.dart  audio_provider.dart  sample_provider.dart  session_provider.dart
lib/screens/: home_screen.dart
lib/services/: audio_engine_channel.dart
lib/widgets/: arpeggiator_panel.dart  bank_selector.dart  bluetooth_panel.dart  control_panel.dart  drum_pad.dart  effects_panel.dart  lcd_display.dart  pad_grid.dart  recording_panel.dart
native_audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Main.cpp  SamplePlayer.cpp  SamplePlayer.h  SamplerVoice.cpp  SamplerVoice.h
test/: widget_test.dart
web/: index.html  manifest.json  standalone.html
